Fix bug of votes and thumbnail being behind .entry
Because of the padding-left approach for .entry to make the content flush
after the thumbnail, the votes buttons and thumbnail gets covered. Raise
the z-index.

--- a/scss/components/_posts.scss
+++ b/scss/components/_posts.scss
@@ -97,11 +97,15 @@
     }
 
     .midcol {
+      position: relative;
+      z-index: 1; // Add z-index to put it on top of .entry
       width: $post-votes-width;
       margin-right: $post-votes-margin-right;
     }
 
     .thumbnail {
+      position: relative;
+      z-index: 1; // Add z-index to put it on top of .entry
       width: $post-thumbnail-width;
       margin-right: $post-thumbnail-margin-right;
 
